# x87

./: .travis.yml  Cargo.toml  README.md  RELEASE_PROCESS.md
src/: decomposed.rs  f80_algo.rs  f80_mod.rs  f80_ops.rs  lib.rs  sign_mag.rs  significand.rs  utils.rs
tests/: asm.proptest-regressions  asm.rs  f80.proptest-regressions  f80.rs  quickcheck.rs
