[package]
name = "x87"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An emulator for the x87 floating point processor"
documentation = "https://docs.rs/x87/"
repository = "https://github.com/jonas-schievink/x87.git"
keywords = ["x87", "f80", "double", "extended", "precision"]
# TODO: Add categories
#categories = []
readme = "README.md"
license = "CC0-1.0"

[dependencies]
bitflags = "1.0.4"
log = "0.4.4"
ieee754 = "0.2.2"
num-bigint = "0.2.0"
num-traits = "0.2.5"

[dev-dependencies]
version-sync = "0.5"
proptest = "0.8.5"
env_logger = "0.5.13"


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'x87 = "[a-z0-9\\.-]+"'
replace = 'x87 = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/x87/[a-z0-9\\.-]+"
replace = "https://docs.rs/x87/{{version}}"
